VRVU-197: Extended data model for match pariticpant response
